--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>vska</title>
+  <title>Veyrix</title>
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=VT323&family=Roboto+Mono:wght@400;600&display=swap" rel="stylesheet">
@@ -112,7 +112,7 @@
       <!-- Left -->
       <div class="flex flex-col items-center gap-3">
         <img src="https://i.pinimg.com/736x/7b/e3/0b/7be30b75cb6d1e94b85d5d2e09cd6dc8.jpg" class="avatar" />
-        <div class="name-box">vska</div>
+        <div class="name-box">Veyrix</div>
 
         <div class="pixel-card w-full">
           <h2 class="exe-title mb-2">STATS</h2>
@@ -196,3 +196,4 @@
 
 </body>
 </html>
+
